// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot test for ConfirmButton Disable 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-margin-1 makeStyles-button-2 MuiButton-containedPrimary Mui-disabled Mui-disabled"
  disabled={true}
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={-1}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    test
  </span>
</button>
`;

exports[`Snapshot test for ConfirmButton Enable 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-margin-1 makeStyles-button-2 MuiButton-containedPrimary"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    test
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;
